Refactor class index creation to always include JDK jars